:lipstick: Add hover effect
Add hover effect on buttons

--- a/style.css
+++ b/style.css
@@ -89,6 +89,12 @@ body {
   font-size: 1.5rem;
   font-weight: 700;
   text-decoration: none;
+
+  transition: background 200ms;
+}
+
+.card-content a.btn-payment:hover {
+  background: hsla(245, 75%, 52%, 0.7);
 }
 
 .card-content a.btn-cancel {
@@ -97,6 +103,12 @@ body {
   font-size: 1.5rem;
   font-weight: 700;
   text-decoration: none;
+
+  transition: color 200ms;
+}
+
+.card-content a.btn-cancel:hover {
+  color: var(--dark-blue);
 }
 
 /* ======================== plan ==================================== */
@@ -139,6 +151,12 @@ body {
   text-decoration: none;
   font-weight: 900;
   font-size: 1.2rem;
+
+  transition: color 200ms;
+}
+
+.plan-content a.btn-change:hover {
+  color: hsla(245, 75%, 52%, 0.7);
 }
 
 /* ======================== footer ==================================== */
